# ad594x-experiments

./: .gitignore  README.md
c_examples/: CMakeLists.txt  README.md
c_examples/example_impedance/: Abstract.txt  CMakeLists.txt  impedance.c  impedance.h  main.c
c_examples/example_rtia/: CMakeLists.txt  main.c
c_examples/inc/: ad5940.h  ad5940_serial.h
c_examples/shared/: ad5940.c  ad5940_serial.c
c_examples/test/: CMakeLists.txt  main.c
hardware-uf2-bin/: flash2700.uf2  update-xiao_nrf52840_ble_bootloader-0.9.2_nosd.uf2  update-xiao_nrf52840_ble_sense_bootloader-0.9.2_nosd.uf2  update.md
js_example/: SerialPortManager.js  ad5940.js  ad5940_reg.js  index.html  main.js  test.js
rules.d/: 71-nrf.rules
